--- a/Resources/views/preserveQueryFormFields.html.twig
+++ b/Resources/views/preserveQueryFormFields.html.twig
@@ -13,6 +13,6 @@
 {% import _self as self -%}
 {% set preserveQuery = preserveQuery is iterable ? preserveQuery : [preserveQuery] %}
 
-{% for parameter in preserveQuery if app.request.query.has(parameter) %}
+{% for parameter in preserveQuery|filter(parameter => app.request.query.has(parameter)) %}
     {{ self.add_hidden_for_parameter(parameter, app.request.query.get(parameter)) }}
 {% endfor %}
